Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_nodes

Changes in progress
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.2 (Trello #1272)
- Reviewed embed support in kses to let contributors add Picasa web albums (Trello #1182)
- BuddyPress Group Email Subscription: Converted to submodule and updated to 3.6.1 (Trello #1042)
- enllacos-educatius: Replaced Ministry of Education link
- BuddyPress: Converted to submodule and upgraded to version 2.5.3 (Trello #1057)
- add-to-any: Upgraded module to version 1.6.17. Added more options for xtecadmin (Trello #1031)
- wordpress-php-info: Upgraded from version 14.12 to version 15
- mu-common: Deactivate pingback to avoid attacks to other sites (Trello #1275)
- mu-common: Removed fix for post thumbnails broken due to upgrading to WP 4.4. No longer necessary in WP 4.5


Changes 16.05.03
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.4.3 (Trello #1176)
- Reactor: Fixed bug with right column size if only right column is enabled (Trello #1185)
- Reactor: Fixed bug with icon in last card (Trello #1187)
- Reactor: Fixed bug getting multiple categories posts from URL (Trello #1142)
- Reactor: Minor improvements in CSS
- Reactor: Added three color palettes (GitHub #275)
- Reactor: Fixed line-height in default WordPress formats, used by imported posts (GitHub #412)
- Reactor: Added description link (Trello #1218)
- reactor-serveis-educatius: Options of depth 0 in menu don't break in two lines if they're long
- Disabled asynchronous default cron because there's an hourly system cron (Trello #1112)
- Added embed, iframe and script support in kses (Trello #1182)
- Hidden options in Settings menu (Trello #1219)